--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 BeautifulSoup==3.2.1
+certifi==2017.7.27.1
+chardet==3.0.4
 eyeD3==0.8
 get==0.0.0
+idna==2.6
 post==0.0.0
 public==0.0.0
 query-string==0.0.0
-request==0.0.0
+requests==2.18.4
 setupfiles==0.0.50
 six==1.10.0
+urllib3==1.22
